# llama-lifecycle

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  app_config.yaml  aws_config.json  config.py  deploy_docs_to_s3.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy_docs.yml  release.yml
docs/: README.md
llama_lifecycle/: __init__.py  main.py
llama_lifecycle/api/: chatbot_api.py
llama_lifecycle/cli/: cli.py
llama_lifecycle/db/: data_loader.py  ingestion_pipeline.py
llama_lifecycle/inference/: inference.py
llama_lifecycle/model/: base.py  llama2.py  model.py  tokenizer.py
llama_lifecycle/serve/: serve.py
llama_lifecycle/test/: llama_qlora_sft_test.py
llama_lifecycle/train/: preprocessing_pipeline.py  qlora_train.py  train.py
llama_lifecycle/utils/: convert_pth_to_hf.sh
tests/: test_example.py
tests/db/: test_ingestion_pipeline.py
tests/train/: test_preprocessing_pipeline.py
