[tool.poetry]
name = "llama-lifecycle"
version = "0.1.0"
description = ""
authors = ["Achilleas Athanasiou Fragkoulis <achilleasatha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
bumpver = "^2023.1129"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[bumpver]
current_version = "0.0.5"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit = true
tag = true
push = true
